@@ -1,1 +1,1 @@
-523.4
+523.5
