@@ -1,3 +1,12 @@
+2007-09-08  Steve Falkenburg  <sfalken@apple.com>
+
+        Prevent WebKit version numbers from containing "4" in Windows.
+
+        Reviewed by Darin.
+
+        * WebKit.vcproj/VERSION: Bump version since our current version ends in 4.
+        * WebKit.vcproj/auto-version.sh: Add version checking code.
+
 2007-09-08  Brady Eidson  <beidson@apple.com>
 
         <rdar://problem/5434431> - Asynchronous Icon Database
